Version 1.14 - 2017-11-09
* FEA#6377 Move initialisation of banks from test case to a wizard
Version 1.12 - 2017-04-28

Version 1.10 - 2016-11-02

Version 1.8 - 2016-07-06
* FEA#0000 Allow to use party as search criteria for bank account
* FEA#0000 Check if the bank account is used on anything before breaking link between party and bank account
Version 1.6 - 2015-12-23

Version 1.4 - 2015-05-29

Version 1.3 - 2015-01-22
* FEA#0000 Add new bic file
* FEA#0000 Allow to search on both compact and non-compact number

Version 1.2 - 2014-07-01
* FEA#0000 Changelog file creation