@@ -1,3 +1,5 @@
+* BUG#7978 Correction du crash lors de la suppression d'un compte bancaire utilisé dans d'autres objets
+
 Version 1.14 - 2017-11-09
 * FEA#6377 Séparation de l'initialisation des banques du cas de test au profit d'un assistant d'initialisation
 Version 1.12 - 2017-04-28
@@ -5,15 +7,15 @@ Version 1.12 - 2017-04-28
 Version 1.10 - 2016-11-02
 
 Version 1.8 - 2016-07-06
-* FEA#0000 Allow to use party as search criteria for bank account
-* FEA#0000 Check if the bank account is used on anything before breaking link between party and bank account
+* FEA#0000 Ajout du tiers dans les critères de recherche d'un compte bancaire
+* FEA#0000 Vérification de l'utilisation d'un compte bancaire dans d'autres objets avant de casser le lien entre tiers et compte bancaireparty and bank account
 Version 1.6 - 2015-12-23
 
 Version 1.4 - 2015-05-29
 
 Version 1.3 - 2015-01-22
-* FEA#0000 Add new bic file
-* FEA#0000 Allow to search on both compact and non-compact number
+* FEA#0000 Ajout d'un nouveau fichier de bic
+* FEA#0000 Autorisation de la recherche sur les numéros de compte compacts et non-compacts
 
 Version 1.2 - 2014-07-01
-* FEA#0000 Changelog file creation
+* FEA#0000 Création du fichier changelog
